# ugs-mcp

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  SAFETY.md  USER_GUIDE.md  pyproject.toml  server.json
.github/workflows/: ci.yml  publish.yml
docs/superpowers/plans/: 2026-05-29-ugs-mcp-server.md  2026-06-01-publish-ugs-mcp.md
ugs_mcp/: .env.example  config.py  confirmation.py  conftest.py  requirements.txt  run_server.sh  server.py  ugs_client.py
ugs_mcp/.claude/: mcp.json
ugs_mcp/gcode/: analyzer.py  commands.py  parser.py  state.py
ugs_mcp/tests/: test_analyzer.py  test_commands.py  test_connection.py  test_inspector.py  test_job.py  test_motion.py  test_parser.py  test_state.py  test_status.py  test_ugs_client.py
ugs_mcp/tools/: connection.py  inspector.py  job.py  motion.py  status.py
