[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ugs-mcp"
version = "0.1.1"
description = "MCP server for controlling CNC machines via Universal GCode Sender"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Zack Peters", email = "zapeters@gmail.com" }]
keywords = ["mcp", "cnc", "gcode", "ugs", "universal-gcode-sender", "grbl", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Manufacturing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "httpx>=0.27.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[project.urls]
Homepage = "https://github.com/zackpeters93/ugs-mcp"
Repository = "https://github.com/zackpeters93/ugs-mcp"
"Bug Tracker" = "https://github.com/zackpeters93/ugs-mcp/issues"

[project.scripts]
ugs-mcp = "ugs_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["ugs_mcp"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["ugs_mcp/tests"]
